@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class RegisterStoreView{}

class RegisterStoreController{
    +registerStore(string code, string designation, string address, string openingTime, string closingTime): Result
}

class Company{
    +getStoreContainer(): StoreContainer
}

class StoreService{
+ StoreService(StoreRepository storeRepo)
    +create(string code, string designation, string address, string openingTime, string closingTime): Store
}

interface StoreRepository <<interface>> {
+ save(Store obj): Result
}

interface RepositoryFactory <<interface>> {
+ getStoreRepository(): StoreRepository
}

class Store{
    -code
    -designation
    -address
    -openingTime
    -closingTime
    Store(string code, string designation, string address, string openingTime, string closingTime)
}

Company "1" -down-> "1" RepositoryFactory: uses
StoreRepository "1" -right-> "0..*" Store: records

RegisterStoreView ..> RegisterStoreController
RegisterStoreController ..> Company
RegisterStoreController ..> StoreService
StoreService ..> StoreRepository
StoreService ..> Store
RegisterStoreController ..> Store

Company -> StoreService: adopts
RepositoryFactory .right.>StoreRepository

@enduml